[Fixes] Fixed the form alignment Added js libraries [finishes #155555567]

--- a/designs/static/CSS/style.css
+++ b/designs/static/CSS/style.css
@@ -3,18 +3,19 @@
 body, html {
     height: 100%;
     width: 100%;
-    background-color: #c0b283 ;
+    color: #47afaf;
+    background-color: #e9e9e9 ;   /*c0b283 */
 }
 body, h1, h2, h3 {
     font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 900px;
 }
 h1 {
-    color: #f8f8f8;
+    color: #282827;/*f8f8f8*/
 }
 .form-format {
+    vertical-align: middle;
     max-width:500px;
-    color: #cc33ff;
     text-align: center;
     margin: auto;
     width: 50%;
@@ -22,38 +23,34 @@ h1 {
 }
 .label-format {
     text-align: left;
-}
-input {
-    max-width: 50%
+    width: 70%;
 }
 .my-bg-img {
+    display: table;
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
     height: 100%;
+    width: 100%
 }
 footer {
-    padding: 50px 0;
+    padding-bottom: 50px ;
     background-color: #f8f8f8;
 }
 .table-center {
     text-align: left;
-    color: #cc33ff;
-    padding-left: 50px;
-    padding-right: 50px;
+    max-width: 70%;
+    margin: 0 auto;
+
 }
 th {
     font-size: 24px;
     font-weight: 900px;
 }
-p, h2 {
-    color: #b82601;
-}
-body {
-    color: #cc33ff;
-}
 .body-extend{
-    height: 100%;
-    /*min-height: 100vh;*/
+    height: 71.5%;
+}
+div {
+    margin: 0 auto;
 }
 
